[package]
name = "ank_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = {version = "0.20.1", features = ["debug"]}
anchor-lang = "0.20.1"
solana-sdk = "1.9.4"
bs58 = "0.4.0"
clap = "3.0.8"

ank = {path = "../ank/programs/ank", features = ["no-entrypoint"]}

